--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-fileupload": "^1.1.10",
+    "googleapis": "^39.2.0",
     "knex": "^0.21.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
